[project]
name = "ai-cdss-api"
version = "0.1.22"
description = "The FastAPI to interface with AI-CDSS Engine"
authors = [
    {name = "Eodyne Systems SL"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "rgs_interface @ git+https://github.com/dabadav/rgs-interface.git@v0.4.1",
    "ai_cdss @ git+https://github.com/dabadav/ai-cdss.git@v0.2.1",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
]

[tool.poetry.scripts]
ai-cdss = "ai_cdss_api.cli:cli"

[tool.poetry]
packages = [{include = "ai_cdss_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
